tests/NormalTests/paczka1/fuzzy1/30341589.err
Error in line 7: 7Pwl8vJjOW S158 -2,2
Error in line 4: URHFAUIlwa S158 19,6
Error in line 22: 71Bf S158 39,3
Error in line 3: 7Pwl8vJjOW S158 88,2
Error in line 19: URHFAUIlwa A772 17,9
Error in line 23: 71Bf A831 20,6
